--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,13 @@ a {
     color: inherit;
     text-decoration: none;
 }
+
+.logo-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 1.5rem;
+}
+
+.logo-container img {
+    border-radius: 10px;
+}
