--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,3 +33,12 @@ a {
     padding: 1.5rem 0;
     color: white;
 }
+
+.admin-page table tbody {
+    cursor: pointer;
+}
+
+.admin-page table thead tr th.edit-drink,
+.admin-page table thead tr th.delete-drink {
+    width: 20px;
+}
