--- a/src/components/drink/Drink.module.css
+++ b/src/components/drink/Drink.module.css
@@ -2,6 +2,7 @@
     border-radius: 10px;
     background-color: rgb(25, 25, 25);
     padding: 0.5rem;
+    margin: 0.75rem 0;
 }
 
 .drinkMarketAlias {
