--- a/src/components/drink/Drink.module.css
+++ b/src/components/drink/Drink.module.css
@@ -1,6 +1,6 @@
 .drink {
     border-radius: 10px;
-    background-color: rgb(25, 25, 25);
+    background-color: #1C1C1C;
     padding: 0.5rem;
     margin: 0.75rem 0;
 }
