--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,6 +23,7 @@ a {
 
 .logo-container img {
     border-radius: 10px;
+    animation: fadeIn 1.5s ease;
 }
 
 .admin-navbar {
@@ -41,4 +42,15 @@ a {
 .admin-page table thead tr th.edit-drink,
 .admin-page table thead tr th.delete-drink {
     width: 20px;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        filter: blur(20px);
+    }
+    10% {
+        opacity: 1;
+        filter: brightness(2) blur(10px);
+    }
 }
