--- a/src/components/drink/Drink.module.css
+++ b/src/components/drink/Drink.module.css
@@ -13,16 +13,29 @@
 .drinkName {
     color: #FFFFFF;
     font-weight: bold;
-    font-size: 26px;
+    font-size: 6vw;
 }
 
 .drinkGraph {
     display: flex;
     align-items: center;
+    padding-left: 0 !important;
 }
 
 .drinkGraph img {
     animation: fade-in-move-up 0.5s;
+}
+
+.drinkPrices {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 !important;
+    height: 100%;
+}
+
+.drinkPrices > span:last-child {
+    width: 100%;
 }
 
 @keyframes fade-in-move-down {
@@ -53,8 +66,8 @@
     color: #FFFFFF;
     text-align: center;
     font-weight: bold;
-    font-size: 26px;
-    padding: 0;
+    font-size: 6vw;
+    padding: 0 5px;
 }
 
 .drinkNoLastPrice {
