WIP responsive grid

--- a/src/components/drink/Drink.module.css
+++ b/src/components/drink/Drink.module.css
@@ -15,24 +15,48 @@
     font-weight: bold;
 }
 
-/* xs */
-@media (min-width: 544px) {
+@media (min-width: 300px) {
     .drinkName {
-        font-size: 20px;
+        font-size: 1rem;
+    }
+    .drinkPrice {
+        font-size: 1rem;
     }
 }
 
-/* md */
-@media (min-width: 768px) {
+@media (min-width: 600px) {
     .drinkName {
-        font-size: 20px;
+        font-size: 1rem;
+    }
+    .drinkPrice {
+        font-size: 1.5rem;
     }
 }
 
-/* lg */
-@media (min-width: 992px) {
+@media (min-width: 800px) {
     .drinkName {
-        font-size: 30px;
+        font-size: 1rem;
+    }
+    .drinkPrice {
+        font-size: 1.5rem;
+    }
+}
+
+@media (min-width: 900px) {
+    .drinkName {
+        font-size: 1.25rem;
+    }
+    .drinkPrice {
+        font-size: 1.5rem;
+    }
+}
+
+@media (min-width: 1000px) {
+    .drinkName {
+        font-size: 2rem;
+    }
+    .drinkPrice {
+        font-size: 1.75rem;
     }
 }
 
@@ -86,7 +110,6 @@
     color: #FFFFFF;
     text-align: center;
     font-weight: bold;
-    font-size: 1.5vw;
     padding: 0 5px;
 }
 
