--- a/src/components/drink/Drink.module.css
+++ b/src/components/drink/Drink.module.css
@@ -15,48 +15,87 @@
     font-weight: bold;
 }
 
+/* xs */
 @media (min-width: 300px) {
     .drinkName {
-        font-size: 1rem;
+        font-size: 28px;
     }
     .drinkPrice {
-        font-size: 1rem;
+        font-size: 20px;
+    }
+    .drinkPrices > span:last-child {
+        width: 100%;
+        font-size: 16px;
     }
 }
 
-@media (min-width: 600px) {
+/* sm */
+@media (min-width: 576px) {
     .drinkName {
-        font-size: 1rem;
+        font-size: 28px;
     }
     .drinkPrice {
-        font-size: 1.5rem;
+        font-size: 22px;
+    }
+    .drinkPrices > span:last-child {
+        width: 100%;
+        font-size: 16px;
     }
 }
 
-@media (min-width: 800px) {
+/* md */
+@media (min-width: 768px) {
     .drinkName {
-        font-size: 1rem;
+        font-size: 20px;
     }
     .drinkPrice {
-        font-size: 1.5rem;
+        font-size: 18px;
+    }
+    .drinkPrices > span:last-child {
+        width: 100%;
+        font-size: 16px;
     }
 }
 
-@media (min-width: 900px) {
+/* lg */
+@media (min-width: 992px) {
     .drinkName {
-        font-size: 1.25rem;
+        font-size: 28px;
     }
     .drinkPrice {
-        font-size: 1.5rem;
+        font-size: 22px;
+    }
+    .drinkPrices > span:last-child {
+        width: 100%;
+        font-size: 16px;
     }
 }
 
-@media (min-width: 1000px) {
+/* xl */
+@media (min-width: 1200px) {
     .drinkName {
-        font-size: 2rem;
+        font-size: 28px;
     }
     .drinkPrice {
-        font-size: 1.75rem;
+        font-size: 22px;
+    }
+    .drinkPrices > span:last-child {
+        width: 100%;
+        font-size: 16px;
+    }
+}
+
+/* xxl */
+@media (min-width: 1400px) {
+    .drinkName {
+        font-size: 28px;
+    }
+    .drinkPrice {
+        font-size: 22px;
+    }
+    .drinkPrices > span:last-child {
+        width: 100%;
+        font-size: 16px;
     }
 }
 
@@ -76,10 +115,6 @@
     align-items: center;
     padding: 0 !important;
     height: 100%;
-}
-
-.drinkPrices>span:last-child {
-    width: 100%;
 }
 
 @keyframes fade-in-move-down {
