--- a/src/components/drink/Drink.module.css
+++ b/src/components/drink/Drink.module.css
@@ -81,8 +81,12 @@
     padding-left: 0 !important;
 }
 
-.drinkGraph img {
-    animation: fade-in-move-up 0.5s;
+.drinkGraphMoveUp {
+    animation: fade-in-move-up 1s;
+}
+
+.drinkGraphMoveDown {
+    animation: fade-in-move-down 1s;
 }
 
 .drinkPrices {
@@ -101,7 +105,7 @@
 @keyframes fade-in-move-down {
     0% {
         opacity: 0;
-        transform: translateY(-3rem);
+        transform: translateY(-2rem);
     }
 
     100% {
@@ -113,7 +117,7 @@
 @keyframes fade-in-move-up {
     0% {
         opacity: 0;
-        transform: translateY(+3rem);
+        transform: translateY(+2rem);
     }
 
     100% {
@@ -143,6 +147,7 @@
     color: #FFFFFF;
     text-align: center;
     padding: 0;
+    transition: all 300ms ease-out 800ms;
 }
 
 .drinkPriceChangePositive {
@@ -151,4 +156,5 @@
     color: #FFFFFF;
     text-align: center;
     padding: 0;
+    transition: all 300ms ease-in 800ms;
 }
