--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,11 +28,13 @@ a {
 
 .admin-navbar {
     align-items: center;
+    padding: 10px 0;
 }
 
-.admin-navbar h1 {
-    padding: 1.5rem 0;
+.admin-navbar span {
     color: white;
+    font-size: 18px;
+    font-weight: bold;
 }
 
 .admin-page table tbody {
