--- a/src/components/drink/Drink.module.css
+++ b/src/components/drink/Drink.module.css
@@ -5,7 +5,11 @@
     margin: 0.75rem 0;
 }
 
-.drinkMarketAlias {
+.drinkNameContainer {
+    min-width: 0;
+}
+
+.drinkAlias {
     color: #FFFFFF;
     font-size: 14px;
 }
@@ -13,6 +17,9 @@
 .drinkName {
     color: #FFFFFF;
     font-weight: bold;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 /* xs */
