--- a/src/components/drink/Drink.module.css
+++ b/src/components/drink/Drink.module.css
@@ -6,7 +6,7 @@
 }
 
 .drinkAlert {
-    animation: alert 5s linear infinite;
+    animation: alert 4s linear infinite;
 }
 
 .drinkNameGraphContainer {
@@ -169,6 +169,7 @@
     text-align: center;
     padding: 0;
     transition: all 300ms ease-out 800ms;
+    color: #FFF;
 }
 
 .drinkNoLastPrice {
@@ -178,25 +179,24 @@
 
 .drinkPriceChangeNegative {
     background-color: #ff3b2f;
-    color: #FFFFFF;
 }
 
 .drinkPriceChangePositive {
     background-color: #35c759;
-    color: #FFFFFF;
+}
+
+.drinkPriceCrack {
+    background-color: rgb(53, 53, 58);
 }
 
 @keyframes alert {
     0% {
-        opacity: 0.4;
-        background-color: #ff3b2f;
+        background-color: rgba(255, 59, 47, 0.4);
     }
     50% {
-        opacity: 0.8;
-        background-color: #1C1C1C;
+        background-color: rgba(28, 28, 28, 0.8);
     }
     100% {
-        opacity: 0.4;
-        background-color: #ff3b2f;
+        background-color: rgba(255, 59, 47, 0.4);
     }
 }
