--- a/src/components/drink/Drink.module.css
+++ b/src/components/drink/Drink.module.css
@@ -1,8 +1,10 @@
 .drink {
     border-radius: 10px;
     background-color: #1C1C1C;
-    padding: 0.5rem;
-    margin: 0.75rem 0;
+    padding: 1rem;
+    margin: 1rem 0;
+    border: 1px solid #313030;
+    box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
 }
 
 .drinkAlert {
@@ -20,7 +22,10 @@
 
 .drinkAlias {
     color: #FFFFFF;
-    font-size: 14px;
+    font-size: 18px;
+    width: 45px;
+    font-family: 'MonospaceTypewriter', monospace;
+    font-weight: bold;
 }
 
 .drinkName {
@@ -34,70 +39,77 @@
 /* xs */
 @media (min-width: 300px) {
     .drinkName {
-        font-size: 22px;
+        font-size: 32px;
+        line-height: 32px;
     }
     .drinkPrice {
-        font-size: 22px;
+        font-size: 28px;
     }
 }
 
 /* sm */
 @media (min-width: 576px) {
     .drinkName {
-        font-size: 28px;
+        font-size: 32px;
+        line-height: 32px;
     }
     .drinkPrice {
-        font-size: 22px;
+        font-size: 28px;
     }
 }
 
 /* md */
 @media (min-width: 768px) {
     .drinkName {
-        font-size: 22px;
+        font-size: 32px;
+        line-height: 32px;
     }
     .drinkPrice {
-        font-size: 18px;
+        font-size: 28px;
     }
 }
 
 /* lg */
 @media (min-width: 992px) {
     .drinkName {
-        font-size: 28px;
+        font-size: 32px;
+        line-height: 32px;
     }
     .drinkPrice {
-        font-size: 22px;
+        font-size: 28px;
     }
 }
 
 /* xl */
 @media (min-width: 1200px) {
     .drinkName {
-        font-size: 28px;
+        font-size: 32px;
+        line-height: 32px;
     }
     .drinkPrice {
-        font-size: 22px;
+        font-size: 28px;
     }
 }
 
 /* xxl */
 @media (min-width: 1400px) {
     .drinkName {
-        font-size: 22px;
+        font-size: 32px;
+        line-height: 32px;
     }
     .drinkPrice {
-        font-size: 18px;
+        font-size: 28px;
     }
 }
 
 /* xxxl */
 @media (min-width: 1700px) {
     .drinkName {
-        font-size: 28px;
+        font-size: 36px;
+        line-height: 36px;
     }
     .drinkPrice {
-        font-size: 22px;
+        font-size: 32px;
     }
 }
 
@@ -130,8 +142,8 @@
 }
 
 .drinkPrices > span:last-child {
-    width: 100%;
-    font-size: 16px;
+    width: 80px;
+    font-size: 20px;
 }
 
 @keyframes fade-in-move-down {
@@ -174,22 +186,27 @@
 
 .drinkNoLastPrice {
     background-color: rgb(53, 53, 58);
+    box-shadow: rgb(53, 53, 58) 0px 0px 2px 1px;
     color: rgb(70, 70, 75);
     transition: all 300ms ease-out 800ms;
 }
 
 .drinkPriceChangeNegative {
     background-color: #ff3b2f;
+    box-shadow: #ff3b2f 0px 0px 2px 1px;
     transition: all 300ms ease-out 800ms;
 }
 
 .drinkPriceChangePositive {
     background-color: #35c759;
+    box-shadow: #35c759 0px 0px 2px 1px;
     transition: all 300ms ease-out 800ms;
 }
 
 .drinkPriceCrack {
     background-color: rgb(53, 53, 58);
+    box-shadow: rgb(53, 53, 58) 0px 0px 2px 1px;
+    transition: all 300ms ease-out 800ms;
 }
 
 @keyframes alert {
